	  being enabled.  That time at the tail end of the transaction where there is
	  an unfinished stop condition.
	* sched/mq_timedreceive.c and sched/mq_timedsend.c:  The count of threads
	  waiting on the message queues was not being decremented after a timeout.
	  This would cause the accounting logic to become out of sync and the, perhaps,
	  an assertion to be triggered.  This is an important bug and fixes a
	  potential crash when using mq_timedreceived() and mq_timedsend().
	* sched/mq_sndinternal.c: Related to the above, the send logic was incrementing
	  the wrong counter when it waited as part of the mq_timedsend.c logic.
	* fs/fat:  Fix an error in the long file name logic:  If the long file name
	  is an even multiple of 13 bytes in length, then it should not include a
	  NULL terminating character.  Fix contributed by Kaushal Parikh.
	* configs/sim/nx11 - Created a separate configuration to build the NX
	  example using the a simulated framebuffer driver on an X11 window.  This
	  example has been verified on Ubuntu 9.09 (it does not work on Cygwin).
	* arch/sim/src/up_touchscreen.c and up_x11eventloop.c - Adds support for a
	  simulated NuttX touchscreen device using mouse/pointer feedback from an
	  x11 window.
	* configs/sim/touchscreen - Adds a configuration to verify the simulated
	  touchscreen driver (Does not work on Cygwin).
	* configs/sam3u/touchscreen - This is the configuration that I plan to use
	  to verify the SAM3U-EK touchscreen driver.  However, as of this writing,
	  there is no touchscreen driver for the board.
	* CONFIG_RTC_HIRES - Add an option to support either a high-resolution RTC
	  that completely replaces the system timer tick but may overflow and lose
	  time when the MCU is off and also for a low-resolution (1 sec/tick) RTC
	  that can run until 2106 with no overflow.  But in this latter case, higher
	  resolution time must come from the system timer.